--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus alias amet assumenda aut autem commodi deleniti,
     ex ipsam iure, maiores neque nesciunt odio omnis provident repellat sed, sit velit vero.</p>
+<p>lorem</p>
 </body>
 </html>
