--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Test</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+<div class="page">
 <p>Alias animi assumenda ea eos, impedit quae sapiente ut. Aliquid dolorem facilis inventore ipsum magni natus nulla
     provident vitae? Amet cupiditate enim illo natus nostrum odit rerum, similique sunt. Delectus?</p>
 <p>Accusamus asperiores aut blanditiis consequatur dolor et ex excepturi impedit laborum molestias, necessitatibus neque
@@ -15,5 +16,6 @@
     repellendus totam. Accusamus aliquid atque culpa esse magnam magni modi nostrum quaerat ratione unde?</p>
 <p>Dolor doloribus ex maiores nobis nulla, quis rem soluta. Aliquid cupiditate distinctio doloremque ducimus ea eaque
     earum est neque nostrum odio odit, praesentium quos recusandae reprehenderit repudiandae sequi vero voluptatem?</p>
+</div>
 </body>
 </html>
