--- a/src/index.html
+++ b/src/index.html
@@ -7,15 +7,44 @@
 </head>
 <body>
 <div class="page">
-<p>Alias animi assumenda ea eos, impedit quae sapiente ut. Aliquid dolorem facilis inventore ipsum magni natus nulla
-    provident vitae? Amet cupiditate enim illo natus nostrum odit rerum, similique sunt. Delectus?</p>
-<p>Accusamus asperiores aut blanditiis consequatur dolor et ex excepturi impedit laborum molestias, necessitatibus neque
-    nobis non nostrum omnis praesentium quidem quos ratione reiciendis rerum similique tempore totam unde voluptate
-    voluptates.</p>
-<p>Ab commodi corporis cupiditate dolorem doloremque est expedita fuga incidunt iste laborum nostrum, qui, quibusdam quo
-    repellendus totam. Accusamus aliquid atque culpa esse magnam magni modi nostrum quaerat ratione unde?</p>
-<p>Dolor doloribus ex maiores nobis nulla, quis rem soluta. Aliquid cupiditate distinctio doloremque ducimus ea eaque
-    earum est neque nostrum odio odit, praesentium quos recusandae reprehenderit repudiandae sequi vero voluptatem?</p>
+    <p>Alias animi assumenda ea eos, impedit quae sapiente ut. Aliquid dolorem facilis inventore ipsum magni natus nulla
+        provident vitae? Amet cupiditate enim illo natus nostrum odit rerum, similique sunt. Delectus?</p>
+    <p>Accusamus asperiores aut blanditiis <a href="">consequatur dolor</a> et ex excepturi impedit laborum molestias,
+        necessitatibus neque
+        nobis non nostrum omnis praesentium quidem quos ratione reiciendis rerum similique tempore totam unde voluptate
+        voluptates.</p>
+    <p>Ab commodi corporis cupiditate dolorem doloremque est expedita fuga incidunt iste laborum nostrum, qui, quibusdam
+        quo
+        repellendus totam. Accusamus aliquid atque culpa esse magnam magni modi nostrum quaerat ratione unde?</p>
+    <p>Dolor doloribus ex maiores nobis nulla, quis rem soluta. Aliquid cupiditate distinctio doloremque ducimus ea
+        eaque
+        earum est neque nostrum odio odit, praesentium quos recusandae reprehenderit repudiandae sequi vero
+        voluptatem?</p>
+</div>
+
+<div class="footer">
+    <div class="container">
+        <div class="footer__content">
+            <div class="footer__content-block">logo</div>
+            <div class="footer__content-block">
+                <address class="footer__contacts">
+                    <div class="footer__contacts-item">
+                        <a class="footer__contacts-link" href="tel:+78127030202">+7 (812) 703-02-02</a>
+                    </div>
+                    <div class="footer__contacts-item">
+                        <a class="footer__contacts-link" href="mailto:info@avalon.ru">info@avalon.ru</a>
+                    </div>
+                    <div class="footer__contacts-item">
+                        <a class="footer__contacts-link" href="">ул.&nbsp;Обручевых, дом 1</a>
+                    </div>
+                </address>
+            </div>
+            <div class="footer__content-block"></div>
+        </div>
+        <div class="footer__bottom">
+
+        </div>
+    </div>
 </div>
 </body>
 </html>
