--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 <div class="page">
+    <div class="container">
     <p>Alias animi assumenda ea eos, impedit quae sapiente ut. Aliquid dolorem facilis inventore ipsum magni natus nulla
         provident vitae? Amet cupiditate enim illo natus nostrum odit rerum, similique sunt. Delectus?</p>
     <p>Accusamus asperiores aut blanditiis <a href="">consequatur dolor</a> et ex excepturi impedit laborum molestias,
@@ -20,6 +21,7 @@
         eaque
         earum est neque nostrum odio odit, praesentium quos recusandae reprehenderit repudiandae sequi vero
         voluptatem?</p>
+    </div>
 </div>
 
 <div class="footer">
