--- a/src/index.html
+++ b/src/index.html
@@ -97,6 +97,60 @@
             earum est neque nostrum odio odit, praesentium quos recusandae reprehenderit repudiandae sequi vero
             voluptatem?</p>
     </div>
+    <div class="section-person">
+        <div class="container">
+            <div class="person__grid">
+                <div class="person__card">
+                    <img src="https://randomuser.me/api/portraits/men/21.jpg" alt="Петров Виктор Андреевич" class="person__avatar">
+                    <div class="person__name">Петров Виктор Андреевич</div>
+                    <div class="person__position">заместитель директора</div>
+                    <div class="person__desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In, sunt, tempore! Amet atque delectus dolore eaque est necessitatibus odit omnis ratione repudiandae vel! Consequatur id in perspiciatis quia quos vero?</div>
+                    <div class="person__socials">
+                        <a href="" class="person__socials-link fa fa-vk"></a>
+                        <a href="" class="person__socials-link fa fa-odnoklassniki-square"></a>
+                        <a href="" class="person__socials-link fa fa-telegram"></a>
+                        <a href="" class="person__socials-link fa fa-whatsapp"></a>
+                    </div>
+                </div>
+                <div class="person__card">
+                    <img src="https://randomuser.me/api/portraits/men/24.jpg" alt="Петров Виктор Андреевич" class="person__avatar">
+                    <div class="person__name">Петров Виктор Андреевич</div>
+                    <div class="person__position">заместитель директора</div>
+                    <div class="person__desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In, sunt, tempore! Amet atque delectus dolore eaque est necessitatibus odit omnis ratione repudiandae vel! Consequatur id in perspiciatis quia quos vero?</div>
+                    <div class="person__socials">
+                        <a href="" class="person__socials-link fa fa-vk"></a>
+                        <a href="" class="person__socials-link fa fa-odnoklassniki-square"></a>
+                        <a href="" class="person__socials-link fa fa-telegram"></a>
+                        <a href="" class="person__socials-link fa fa-whatsapp"></a>
+                    </div>
+                </div>
+                <div class="person__card">
+                    <img src="https://randomuser.me/api/portraits/men/20.jpg" alt="Петров Виктор Андреевич" class="person__avatar">
+                    <div class="person__name">Петров Виктор Андреевич</div>
+                    <div class="person__position">заместитель директора</div>
+                    <div class="person__desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In, sunt, tempore! Amet atque delectus dolore eaque est necessitatibus odit omnis ratione repudiandae vel! Consequatur id in perspiciatis quia quos vero?</div>
+                    <div class="person__socials">
+                        <a href="" class="person__socials-link fa fa-vk"></a>
+                        <a href="" class="person__socials-link fa fa-odnoklassniki-square"></a>
+                        <a href="" class="person__socials-link fa fa-telegram"></a>
+                        <a href="" class="person__socials-link fa fa-whatsapp"></a>
+                    </div>
+                </div>
+                <div class="person__card">
+                    <img src="https://randomuser.me/api/portraits/men/22.jpg" alt="Петров Виктор Андреевич" class="person__avatar">
+                    <div class="person__name">Петров Виктор Андреевич</div>
+                    <div class="person__position">заместитель директора</div>
+                    <div class="person__desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In, sunt, tempore! Amet atque delectus dolore eaque est necessitatibus odit omnis ratione repudiandae vel! Consequatur id in perspiciatis quia quos vero?</div>
+                    <div class="person__socials">
+                        <a href="" class="person__socials-link fa fa-vk"></a>
+                        <a href="" class="person__socials-link fa fa-odnoklassniki-square"></a>
+                        <a href="" class="person__socials-link fa fa-telegram"></a>
+                        <a href="" class="person__socials-link fa fa-whatsapp"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div class="footer">
