--- a/src/index.html
+++ b/src/index.html
@@ -200,5 +200,7 @@
     </div>
 </div>
 <a class="to-top-btn fa fa-angle-up" href="#"></a>
+<script src="js/libs.js"></script>
+<script src="js/app.js"></script>
 </body>
 </html>
