--- a/src/index.html
+++ b/src/index.html
@@ -51,60 +51,20 @@
             nobis non nostrum omnis praesentium quidem quos ratione reiciendis rerum similique tempore totam unde
             voluptate
             voluptates.</p>
-        <p>Ab commodi corporis cupiditate dolorem doloremque est expedita fuga incidunt iste laborum nostrum, qui,
-            quibusdam
-            quo
-            repellendus totam. Accusamus aliquid atque culpa esse magnam magni modi nostrum quaerat ratione unde?</p>
-        <p>Dolor doloribus ex maiores nobis nulla, quis rem soluta. Aliquid cupiditate distinctio doloremque ducimus ea
-            eaque
-            earum est neque nostrum odio odit, praesentium quos recusandae reprehenderit repudiandae sequi vero
-            voluptatem?</p>
-
-        <p>Dolor doloribus ex maiores nobis nulla, quis rem soluta. Aliquid cupiditate distinctio doloremque ducimus ea
-            eaque
-            earum est neque nostrum odio odit, praesentium quos recusandae reprehenderit repudiandae sequi vero
-            voluptatem?</p>
-        <p>Dolor doloribus ex maiores nobis nulla, quis rem soluta. Aliquid cupiditate distinctio doloremque ducimus ea
-            eaque
-            earum est neque nostrum odio odit, praesentium quos recusandae reprehenderit repudiandae sequi vero
-            voluptatem?</p>
-        <p>Dolor doloribus ex maiores nobis nulla, quis rem soluta. Aliquid cupiditate distinctio doloremque ducimus ea
-            eaque
-            earum est neque nostrum odio odit, praesentium quos recusandae reprehenderit repudiandae sequi vero
-            voluptatem?</p>
-        <p>Dolor doloribus ex maiores nobis nulla, quis rem soluta. Aliquid cupiditate distinctio doloremque ducimus ea
-            eaque
-            earum est neque nostrum odio odit, praesentium quos recusandae reprehenderit repudiandae sequi vero
-            voluptatem?</p>
-        <p>Dolor doloribus ex maiores nobis nulla, quis rem soluta. Aliquid cupiditate distinctio doloremque ducimus ea
-            eaque
-            earum est neque nostrum odio odit, praesentium quos recusandae reprehenderit repudiandae sequi vero
-            voluptatem?</p>
-        <p>Dolor doloribus ex maiores nobis nulla, quis rem soluta. Aliquid cupiditate distinctio doloremque ducimus ea
-            eaque
-            earum est neque nostrum odio odit, praesentium quos recusandae reprehenderit repudiandae sequi vero
-            voluptatem?</p>
-        <p>Dolor doloribus ex maiores nobis nulla, quis rem soluta. Aliquid cupiditate distinctio doloremque ducimus ea
-            eaque
-            earum est neque nostrum odio odit, praesentium quos recusandae reprehenderit repudiandae sequi vero
-            voluptatem?</p>
-        <p>Dolor doloribus ex maiores nobis nulla, quis rem soluta. Aliquid cupiditate distinctio doloremque ducimus ea
-            eaque
-            earum est neque nostrum odio odit, praesentium quos recusandae reprehenderit repudiandae sequi vero
-            voluptatem?</p>
-        <p>Dolor doloribus ex maiores nobis nulla, quis rem soluta. Aliquid cupiditate distinctio doloremque ducimus ea
-            eaque
-            earum est neque nostrum odio odit, praesentium quos recusandae reprehenderit repudiandae sequi vero
-            voluptatem?</p>
     </div>
     <div class="section-person">
         <div class="container">
             <div class="person__grid">
                 <div class="person__card">
+                    <div class="person__info">
                     <img src="https://randomuser.me/api/portraits/men/21.jpg" alt="Петров Виктор Андреевич" class="person__avatar">
+                    <div class="person__name-position">
                     <div class="person__name">Петров Виктор Андреевич</div>
                     <div class="person__position">заместитель директора</div>
+                    </div>
+                    </div>
                     <div class="person__desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In, sunt, tempore! Amet atque delectus dolore eaque est necessitatibus odit omnis ratione repudiandae vel! Consequatur id in perspiciatis quia quos vero?</div>
+
                     <div class="person__socials">
                         <a href="" class="person__socials-link fa fa-vk"></a>
                         <a href="" class="person__socials-link fa fa-odnoklassniki-square"></a>
@@ -113,10 +73,15 @@
                     </div>
                 </div>
                 <div class="person__card">
-                    <img src="https://randomuser.me/api/portraits/men/24.jpg" alt="Петров Виктор Андреевич" class="person__avatar">
-                    <div class="person__name">Петров Виктор Андреевич</div>
-                    <div class="person__position">заместитель директора</div>
+                    <div class="person__info">
+                        <img src="https://randomuser.me/api/portraits/men/24.jpg" alt="Петров Виктор Андреевич" class="person__avatar">
+                        <div class="person__name-position">
+                            <div class="person__name">Петров Виктор Андреевич</div>
+                            <div class="person__position">заместитель директора</div>
+                        </div>
+                    </div>
                     <div class="person__desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In, sunt, tempore! Amet atque delectus dolore eaque est necessitatibus odit omnis ratione repudiandae vel! Consequatur id in perspiciatis quia quos vero?</div>
+
                     <div class="person__socials">
                         <a href="" class="person__socials-link fa fa-vk"></a>
                         <a href="" class="person__socials-link fa fa-odnoklassniki-square"></a>
@@ -125,10 +90,15 @@
                     </div>
                 </div>
                 <div class="person__card">
-                    <img src="https://randomuser.me/api/portraits/men/20.jpg" alt="Петров Виктор Андреевич" class="person__avatar">
-                    <div class="person__name">Петров Виктор Андреевич</div>
-                    <div class="person__position">заместитель директора</div>
+                    <div class="person__info">
+                        <img src="https://randomuser.me/api/portraits/men/12.jpg" alt="Петров Виктор Андреевич" class="person__avatar">
+                        <div class="person__name-position">
+                            <div class="person__name">Петров Виктор Андреевич</div>
+                            <div class="person__position">заместитель директора</div>
+                        </div>
+                    </div>
                     <div class="person__desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In, sunt, tempore! Amet atque delectus dolore eaque est necessitatibus odit omnis ratione repudiandae vel! Consequatur id in perspiciatis quia quos vero?</div>
+
                     <div class="person__socials">
                         <a href="" class="person__socials-link fa fa-vk"></a>
                         <a href="" class="person__socials-link fa fa-odnoklassniki-square"></a>
@@ -137,10 +107,15 @@
                     </div>
                 </div>
                 <div class="person__card">
-                    <img src="https://randomuser.me/api/portraits/men/22.jpg" alt="Петров Виктор Андреевич" class="person__avatar">
-                    <div class="person__name">Петров Виктор Андреевич</div>
-                    <div class="person__position">заместитель директора</div>
+                    <div class="person__info">
+                        <img src="https://randomuser.me/api/portraits/men/29.jpg" alt="Петров Виктор Андреевич" class="person__avatar">
+                        <div class="person__name-position">
+                            <div class="person__name">Петров Виктор Андреевич</div>
+                            <div class="person__position">заместитель директора</div>
+                        </div>
+                    </div>
                     <div class="person__desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. In, sunt, tempore! Amet atque delectus dolore eaque est necessitatibus odit omnis ratione repudiandae vel! Consequatur id in perspiciatis quia quos vero?</div>
+
                     <div class="person__socials">
                         <a href="" class="person__socials-link fa fa-vk"></a>
                         <a href="" class="person__socials-link fa fa-odnoklassniki-square"></a>
