--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
     </div>
     <div class="section-person">
         <div class="container">
-            <div class="person__grid">
+            <div class="owl-carousel owl--person">
                 <div class="person__card">
                     <img src="https://randomuser.me/api/portraits/men/21.jpg" alt="Петров Виктор Андреевич" class="person__avatar">
                     <div class="person__name">Петров Виктор Андреевич</div>
@@ -199,7 +199,7 @@
         </div>
     </div>
 </div>
-<a class="to-top-btn fa fa-angle-up" href="#"></a>
+<a class="to-top-btn to-top-btn--hidden fa fa-angle-up" href="#"></a>
 <script src="js/libs.js"></script>
 <script src="js/app.js"></script>
 </body>
