--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,22 @@
     </div>
 </header>
 <div class="page">
+    <div class="swiper sliderSwiper">
+        <div class="swiper-wrapper">
+            <div class="swiper-slide slider__slide">Slide 1</div>
+            <div class="swiper-slide slider__slide">Slide 2</div>
+            <div class="swiper-slide slider__slide">Slide 3</div>
+            <div class="swiper-slide slider__slide">Slide 4</div>
+            <div class="swiper-slide slider__slide">Slide 5</div>
+            <div class="swiper-slide slider__slide">Slide 6</div>
+            <div class="swiper-slide slider__slide">Slide 7</div>
+            <div class="swiper-slide slider__slide">Slide 8</div>
+            <div class="swiper-slide slider__slide">Slide 9</div>
+        </div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-pagination"></div>
+    </div>
     <div class="container">
         <p>Alias animi assumenda ea eos, impedit quae sapiente ut. Aliquid dolorem facilis inventore ipsum magni natus
             nulla
