--- a/src/index.html
+++ b/src/index.html
@@ -41,27 +41,31 @@
     </div>
 </header>
 <div class="page">
+    <div class="container">
     <div class="swiper sliderSwiper">
         <div class="swiper-wrapper">
-            <div class="swiper-slide slider__slide">Slide 1</div>
-            <div class="swiper-slide slider__slide">Slide 2</div>
-            <div class="swiper-slide slider__slide">Slide 3</div>
-            <div class="swiper-slide slider__slide">Slide 4</div>
-            <div class="swiper-slide slider__slide">Slide 5</div>
-            <div class="swiper-slide slider__slide">Slide 6</div>
-            <div class="swiper-slide slider__slide">Slide 7</div>
-            <div class="swiper-slide slider__slide">Slide 8</div>
-            <div class="swiper-slide slider__slide">Slide 9</div>
+            <div class="swiper-slide slider__slide">
+                <img  class="slider__cover" src="https://images.unsplash.com/photo-1565498546237-caee5443b06a?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1600&q=80" alt="">
+                <div class="slider__heading">lorem</div>
+            </div>
+            <div class="swiper-slide slider__slide">
+                <img class="slider__cover" src="https://images.unsplash.com/photo-1616849813254-6df6a8295798?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2021&q=80" alt="">
+            </div>
+            <div class="swiper-slide slider__slide"><img class="slider__cover" src="https://images.unsplash.com/photo-1584132682780-818e9fea59ac?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=3308&q=80" alt="">
+            </div>
         </div>
         <div class="swiper-button-next"></div>
         <div class="swiper-button-prev"></div>
         <div class="swiper-pagination"></div>
     </div>
+    </div>
     <div class="container">
         <p>Alias animi assumenda ea eos, impedit quae sapiente ut. Aliquid dolorem facilis inventore ipsum magni natus
             nulla
             provident vitae? Amet cupiditate enim illo natus nostrum odit rerum, similique sunt. Delectus?</p>
-        <p>Accusamus asperiores aut blanditiis <a href="">consequatur dolor</a> et ex excepturi impedit laborum
+        <p data-aos="fade-right"
+           data-aos-offset="300"
+           data-aos-easing="ease-in-sine">Accusamus asperiores aut blanditiis <a href="">consequatur dolor</a> et ex excepturi impedit laborum
             molestias,
             necessitatibus neque
             nobis non nostrum omnis praesentium quidem quos ratione reiciendis rerum similique tempore totam unde
@@ -75,6 +79,25 @@
             eaque
             earum est neque nostrum odio odit, praesentium quos recusandae reprehenderit repudiandae sequi vero
             voluptatem?</p>
+
+        <p>Dolor doloribus ex maiores nobis nulla, quis rem soluta. Aliquid cupiditate distinctio doloremque ducimus ea
+            eaque
+            earum est neque nostrum odio odit, praesentium quos recusandae reprehenderit repudiandae sequi vero
+            voluptatem?</p>
+        <div class="gallery__grid">
+            <a class="gallery__item" href="https://images.unsplash.com/photo-1546948630-1149ea60dc86?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" data-fancybox="nature" data-caption="Море">
+                <img class="gallery__img" src="https://images.unsplash.com/photo-1546948630-1149ea60dc86?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80" alt="" />
+            </a>
+            <a class="gallery__item" href="https://images.unsplash.com/photo-1426604966848-d7adac402bff?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1200&h=800&q=80" data-fancybox="nature" data-caption="Горы и озеро">
+                <img class="gallery__img" src="https://images.unsplash.com/photo-1426604966848-d7adac402bff?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1200&h=800&q=80" alt="Горы" />
+            </a>
+            <a data-fancybox="nature"  href="https://www.youtube.com/watch?v=_sI_Ps7JSEk&amp;autoplay=1&amp;rel=0&amp;controls=0&amp;showinfo=0">
+                <img class="gallery__img" src="https://images.unsplash.com/photo-1426604966848-d7adac402bff?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1200&h=800&q=80" alt="Горы" />
+            </a>
+        </div>
+
+
+
 
         <p>Dolor doloribus ex maiores nobis nulla, quis rem soluta. Aliquid cupiditate distinctio doloremque ducimus ea
             eaque
@@ -108,10 +131,7 @@
             eaque
             earum est neque nostrum odio odit, praesentium quos recusandae reprehenderit repudiandae sequi vero
             voluptatem?</p>
-        <p>Dolor doloribus ex maiores nobis nulla, quis rem soluta. Aliquid cupiditate distinctio doloremque ducimus ea
-            eaque
-            earum est neque nostrum odio odit, praesentium quos recusandae reprehenderit repudiandae sequi vero
-            voluptatem?</p>
+        <div class="ya-share2" data-shape="round" data-services="vkontakte,odnoklassniki,telegram"></div>
     </div>
     <div class="section-flow">
         <div class="swiper flowSwiper">
@@ -267,6 +287,7 @@
     </div>
 </div>
 <a class="to-top-btn to-top-btn--hidden fa fa-angle-up" href="#"></a>
+<script src="https://yastatic.net/share2/share.js" async></script>
 <script src="https://api-maps.yandex.ru/2.1/?apikey=ca5420c2-09cf-49d3-ba00-d88d2aaa8a76&amp;lang=ru" defer></script>
 <script src="js/libs.js"></script>
 <script src="js/app.js"></script>
