--- a/src/index.html
+++ b/src/index.html
@@ -265,6 +265,25 @@
          data-points="[{&quot;lat&quot;:59.934199,&quot;lng&quot;:30.324465}]"
          data-icon="img/map-marker.svg"
          data-title="Казанский собор" data-zoom="18"></div>
+
+    <div class="section-split-cards">
+        <div class="container">
+            <div class="grid-split-cards">
+                <div class="grid-split-card__item"></div>
+                <div class="grid-split-card__item"></div>
+                <div class="grid-split-card__item"></div>
+                <div class="grid-split-card__item"></div>
+                <div class="grid-split-card__item"></div>
+                <div class="grid-split-card__item"></div>
+                <div class="grid-split-card__item"></div>
+                <div class="grid-split-card__item"></div>
+                <div class="grid-split-card__item"></div>
+                <div class="grid-split-card__item"></div>
+                <div class="grid-split-card__item"></div>
+                <div class="grid-split-card__item"></div>
+            </div>
+        </div>
+    </div>
     </div>
 
 
