--- a/src/index.html
+++ b/src/index.html
@@ -262,7 +262,9 @@
     </div>
     <div id="map"
          class="map"
-         data-points="[{&quot;lat&quot;:59.934199,&quot;lng&quot;:30.324465}]"
+         data-points="[{
+&quot;lat&quot;:60.934199,&quot;lng&quot;:30.24465,&quot;title&quot;:&quot;1&quot;},
+{&quot;lat&quot;:59.934199,&quot;lng&quot;:31.324465,&quot;title&quot;:&quot;2&quot;}]"
          data-icon="img/map-marker.svg"
          data-title="Казанский собор" data-zoom="18"></div>
 
